--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.mkkim</groupId>
 	<artifactId>myspringboot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>myspringboot</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -29,6 +30,42 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-devtools</artifactId>
+	    </dependency>
+	    
+	    <!-- H2 memory db -->
+	    <dependency>
+	    	<groupId>com.h2database</groupId>
+	    	<artifactId>h2</artifactId>
+	    	<scope>runtime</scope>
+	    </dependency>
+	    
+	    <!-- boot jdbc -->
+	    <dependency>
+	    	<groupId>org.springframework.boot</groupId>
+	    	<artifactId>spring-boot-starter-jdbc</artifactId>
+	    </dependency>
+	    
+	    <!-- mysql -->
+	    <dependency>
+	    	<groupId>mysql</groupId>
+	    	<artifactId>mysql-connector-java</artifactId>
+	    	<version>8.0.13</version>
+	    </dependency>
+	    
+	    <!-- jpa -->
+	    <dependency>
+	    	<groupId>org.springframework.boot</groupId>
+	    	<artifactId>spring-boot-starter-data-jpa</artifactId>
+	    </dependency>
 	</dependencies>
 
 	<build>
